2001-09-02  Bruno Haible  <haible@clisp.cons.org>

	* pipe.h: Ensure pid_t gets declared.
	* pipe-bidi.c: Include pipe.h.
	* pipe-in.c: Likewise.
	* pipe-out.c: Likewise.

2001-08-26  Bruno Haible  <haible@clisp.cons.org>

	* printf-parse.h: Remove file.
	* printf.h: Remove file.
	* printf-prs.c: Remove file.
	* Makefile.am (EXTRA_DIST): Remove printf-prs.c.
	(noinst_HEADERS): Remove printf-parse.h, printf.h.
	* system.h (MIN): New macro.

2001-07-28  Bruno Haible  <haible@clisp.cons.org>

	* printf-parse.h: Don't include <ctype.h>.
	(ISDIGIT): New macro.
	(read_int, parse_one_spec): Use ISDIGIT instead of isdigit.

2001-08-05  Bruno Haible  <haible@clisp.cons.org>

	* stdbool.h.in (_Bool): Define differently in C++ mode.

2001-07-23  Bruno Haible  <haible@clisp.cons.org>

	* system.h: Assume <limits.h> exists.
	* fstrcmp.c: Likewise.

2001-07-01  Bruno Haible  <haible@clisp.cons.org>

	* utf8-ucs4.h: New file, extracted from linebreak.c.
	* utf16-ucs4.h: New file, extracted from linebreak.c.
	* linebreak.c (u8_mbtouc_aux, u8_mbtouc): Moved to utf8-ucs4.h.
	(u16_mbtouc_aux, u16_mbtouc): Moved to utf16-ucs4.h.
	* Makefile.am (noinst_HEADERS): Add utf8-ucs4.h, utf16-ucs4.h.

2001-06-30  Bruno Haible  <haible@clisp.cons.org>

	* stdbool.h.in: New file.
	* Makefile.am (EXTRA_DIST): Add stdbool.h.in.
	(all-local): Depend on @STDBOOL_H@.
	(stdbool.h): New rule.
	(MOSTLYCLEANFILES): New variable.
	* progname.h: Include stdbool.h.
	(error_with_progname): Change type to bool.
	* progname.c (error_with_progname): Likewise.

2001-06-10  Bruno Haible  <haible@clisp.cons.org>

	* findprog.h: New file.
	* findprog.c: New file.
	* full-write.h: New file.
	* full-write.c: New file.
	* pipe.h: New file.
	* pipe-bidi.c: New file.
	* pipe-in.c: New file.
	* pipe-out.c: New file.
	* safe-read.h: New file.
	* safe-read.c: New file.
	* wait-process.h: New file.
	* wait-process.c: New file.
	* Makefile.am (libnlsut_a_SOURCES): Add findprog.c, full-write.c,