@@ -28,13 +28,13 @@ stdbool.h.in \
 gen-lbrkprop.c 3level.h
 
 libnlsut_a_SOURCES = basename.c c-ctype.c concatpath.c findprog.c fstrcmp.c \
-full-write.c getopt.c getopt1.c hash.c linebreak.c localcharset.c mbswidth.c \
-obstack.c pipe-bidi.c pipe-in.c pipe-out.c progname.c safe-read.c \
+full-write.c gcd.c getopt.c getopt1.c hash.c linebreak.c localcharset.c \
+mbswidth.c obstack.c pipe-bidi.c pipe-in.c pipe-out.c progname.c safe-read.c \
 wait-process.c xerror.c xgetcwd.c xmalloc.c xstrdup.c
 
 libnlsut_a_LIBADD = @ALLOCA@ @LIBOBJS@
 
-noinst_HEADERS = c-ctype.h error.h findprog.h fstrcmp.h full-write.h \
+noinst_HEADERS = c-ctype.h error.h findprog.h fstrcmp.h full-write.h gcd.h \
 getline.h getopt.h hash.h lbrkprop.h linebreak.h mbswidth.h obstack.h \
 pathmax.h pipe.h progname.h safe-read.h system.h utf8-ucs4.h utf16-ucs4.h \
 wait-process.h xerror.h
